customized it to my liking

--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
         <p>Welcome to my portfolio</p>
       </header>
 
-
-      <blockquote>
-        <p>A developer from Finland</p>
-      </blockquote>
-
       <section>
         <h2>About me</h2>
+        <p align="left"> 
+          <a href="https://twitter.com/williamtoptoter" target="blank">
+            <img src="https://img.shields.io/badge/Twitter-1DA1F2?style=for-the-badge&logo=twitter&logoColor=white" alt="williamtoptoter" />
+          </a> 
+          <a href="https://github.com/WilliamTuominiemi" target="blank">
+            <img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" alt="WilliamTuominiemi" />
+          </a> 
+        </p>
+        
         <p>
           🔭 I’m currently working on a YouTube livestream chat bot
         </p>
@@ -43,39 +47,45 @@
       </section>
 
       <section class="light">
-        <h2>Projects</h2>
+        <h2>GitHub stats</h2>
+        <p>&nbsp;<img  src="https://github-readme-stats.vercel.app/api?username=williamtuominiemi&theme=jolly&show_icons=true&locale=en" alt="williamtuominiemi" /></p>
 
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
 
-        <h2>Accomplishments</h2>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+        <p><img  src="https://github-readme-stats.vercel.app/api/top-langs?username=williamtuominiemi&theme=jolly&show_icons=true&locale=en&layout=compact" alt="williamtuominiemi" /></p>
 
       </section>
 
-      <blockquote>
-        <p>"xqcL" <br>-xQc</p>
-      </blockquote>
+      <section class="light">
+        <h2>Languages and tools</h2>
+        <p align="left">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/csharp/csharp-original.svg" alt="csharp" width="40" height="40"/> 
+          <img src="https://www.vectorlogo.zone/logos/heroku/heroku-icon.svg" alt="heroku" width="40" height="40"/> 
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" width="40" height="40"/> 
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="javascript" width="40" height="40"/> 
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mongodb/mongodb-original-wordmark.svg" alt="mongodb" width="40" height="40"/> 
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/nodejs/nodejs-original-wordmark.svg" alt="nodejs" width="40" height="40"/> 
+          <img src="https://www.vectorlogo.zone/logos/unity3d/unity3d-icon.svg" alt="unity" width="40" height="40"/> 
+          <img src="https://cdn.worldvectorlogo.com/logos/arduino-1.svg" alt="arduino" width="40" height="40"/>
+      </p>
+
+       
+      </section>
 
       <section class="left">
-        <h2>Work History</h2>
+        <h2>Projects</h2>
 
-        <h3>Google</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <h3>SpaceX</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <h3>Apple</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+        <h3>Bayynet NFT-Art-Platform</h3>
+        <a align="center" href="https://github.com/WilliamTuominiemi/NFT-Art-Platform">
+          <img align="center" src="https://github-readme-stats.vercel.app/api/pin/?username=WilliamTuominiemi&repo=NFT-Art-Platform&theme=jolly" />
+        </a>
+        <h3>GeoGuessr Clone</h3>
+        <a align="center" href="https://github.com/WilliamTuominiemi/GeoGuessr-Clone">
+          <img align="center" src="https://github-readme-stats.vercel.app/api/pin/?username=WilliamTuominiemi&repo=GeoGuessr-Clone&theme=jolly" />
+        </a>
+        <h3>YouTube Chatbot</h3>
+        <a align="center" href="https://github.com/WilliamTuominiemi/YouTube-Chatbot">
+          <img align="center" src="https://github-readme-stats.vercel.app/api/pin/?username=WilliamTuominiemi&repo=YouTube-Chatbot&theme=jolly" />
+        </a>
 
       </section>
 
